--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
         <activity
+            android:name=".SettingsActivity"
+            android:exported="true"
+            android:theme="@style/CustomTheme"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
